fix: z-index

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
 }
 
 #content {
+    z-index: 99;
     background-color: #f9f9f9;
     position: absolute;
     bottom: 0;
@@ -86,6 +87,7 @@ body {
 }
 
 #content h1 {
+    margin-top: 6px;
     letter-spacing: 0.1em;
     margin-bottom: 6px;
 }
